fix spacing on question show page

--- a/app/assets/stylesheets/_questions.css.scss
+++ b/app/assets/stylesheets/_questions.css.scss
@@ -16,6 +16,10 @@
     &:last-of-type {
       border-bottom: none;
     }
+
+    &:first-of-type p {
+      margin-top: 0;
+    }
   }
 
   a {
